--- a/third.html
+++ b/third.html
@@ -5,6 +5,11 @@
         <meta name="description" content="this is the third project of me!">  
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <title>this is third site I have made</title>
+        <style>
+          .logIn{
+              font-min-size: xx-large;
+          }
+        </style>
     </head>
 
     <body> 
