--- a/third.html
+++ b/third.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>  
-<html>  
-    <head>
-        <meta name="author" content="barat Ali Hassanzada">  
-        <meta name="description" content="this is the third project of me!">  
-        <link rel="stylesheet" type="text/css" href="style.css"> 
-        <title>this is third site I have made</title>
-    </head>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="author" content="barat Ali Hassanzada">
+    <meta name="description" content="this is the third project of me!">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>this is third site I have made</title>
+</head>
 
-    <body> 
-        <div class="logIn">         
-          <form>  
-             <input type="text" placeholder="Enter your userName:">
-         </form>
-        </div>
+<body>
+<h1>
+    This is the new Style Added to Site
+</h1>
+<div class="logIn">
+    <form>
+        <input type="text" placeholder="Enter your userName:">
+    </form>
+</div>
 
-    </body>
+</body>
 </html>
